--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -1,6 +1,6 @@
-/* .flexContainer {
-  composes: sideBySideCenter from 'styles/utils.module.css';
-} */
+.flexContainer {
+	composes: sideBySideCenter from "styles/utils.module.css";
+}
 
 .text {
 	padding-top: calc(var(--display) * 0.5);
